# ZeroTwo_bot

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Helper.py  LICENSE.md  README.md  bot.py  build_grpc_proto.sh  buttons.py  develop_to_deploy.sh  go.mod  go.sum  index.js  index.ts  install_grpcwebproxy.sh  main.py  manage.py  package-lock.json  package.json  requirements.txt  run_grpcwebproxy.sh  run_server.sh  run_zerotwo.sh  test.py  test_case  tsconfig.json
ZeroTwo_bot/: asgi.py  settings.py  urls.py  wsgi.py
commands/: after10sec.js  audio_filter.js  audio_filter.ts  clear.js  continue.js  continue.ts  credit.js  credit.ts  dance.js  dance.ts  pause.js  pause.ts  ping.js  ping.ts  play.js  play.ts  queue.js  queue.ts  remove.js  remove.ts  repeat.js  repeat.ts  shuffle.js  shuffle.ts  skip.js  skip.ts  skipTo.js  stop.js  stop.ts  volume.js  volume.ts  weather.js  weather.ts
connect/: adaptor.py  admin.py  forms.py  models.py  urls.py  views.py
db/: Command.py  __init__.py
discord_bot/: Helper.py  bot.py  buttons.py  start.py
home/: urls.py  views.py
kubernetes/: config.yaml
pages/: .dockerignore  Dockerfile  index.html  install_grpcwebproxy.sh  package-lock.json  package.json  tsconfig.json  vite.config.mts  vite.config.mts.txt  vite.config.ts
protobuf/: auth.proto  play.proto  queue.proto  voice_channel.proto
src/: command.rs  main.go  main.rs  play.rs  server.rs
templates/: base.html  connect.html  connect_error.html  footer.html  head.html  home.html  menu.html
zerotwocontrol/: apps.py  forms.py  urls.py  views.py
(+77 files in other folders)
