[package]
name = "zerotwo_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version='1.17.0', features=['full'] }
dotenv = "0.15.0"

[dependencies.serenity]
default-features = true
features = [ "builder",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "voice",
    "voice-model",
    "tokio",
    "rustls_backend"
]
version = "0.10"